# trabalho_final_ml

./: .gitignore  EDA.py  README.md  app.py  balancear_dataset.py  exemplo_predicao.txt  preprocessing.py  pyproject.toml  relatorio_comparativo.md  train.py
dataset/processed/: model_comparison_results.csv  y_test.npy  y_train.npy
json/: eda_report.json  metadata.json  training_metrics.json
